Start the implementation of badges and pointscales (not API key yet)
